# carecost-ML-snowflake-gcp-vertex

./: .env.example  .gitignore  ARCHITECTURE.md  BLOG.md  DEMO.md  LICENSE  LINKEDIN.md  README.md  SPEC.md  TCO.md  TEARDOWN.md  app.py  config.example.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: carecost_fusion.ipynb
sql/: 00_setup.sql  01_base_features.sql  02_residual_summary.sql  03_candidate_features.sql
src/: __init__.py  evaluation.py  feature_catalog.py  features.py  gemini_hypothesis.py  generate_claims.py  modeling.py  pipeline.py  residuals.py  snowflake_io.py  vertex_experiments.py  vertex_geneval.py  vertex_pipeline.py  vertex_prediction.py  vertex_registry.py
tests/: test_data_generation.py  test_evaluation_gate.py  test_feature_catalog.py  test_pipeline.py  test_temporal_leakage.py
